# umamusume_personality_devin

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: lint.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  character_scraper.py  main.py  models.py  rag.py  umamusume_data.py
frontend/: .eslintrc.js  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/api/: authApi.ts  mamusumeApi.ts
frontend/src/components/: LoginForm.tsx  PersonalityQuiz.tsx
frontend/src/css/: spinner.css
frontend/src/types/: PersonalityQuiz.d.ts
