[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Daku-on <113434878+Daku-on@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
openai = "^1.47.0"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.0"
python-multipart = "^0.0.10"
langchain-openai = "^0.2.0"
faiss-cpu = "^1.8.0.post1"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
